--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -20,7 +20,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    z-index: 100000;
+    // z-index: 100000;
     position: relative;
 
     @media only screen and (max-width: $breakpoint-md) {
