--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -2,5 +2,9 @@
 
 .swiper {
   height: 100%;
-}
+  z-index: 0 !important;
 
+  &-wrapper {
+    z-index: 0 !important;
+  }
+}
